--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         app:buttonText="Login"
-        app:pulseColor="#55FF5722"
+        app:pulseColor="#303F9F"
         app:successIcon="@drawable/ic_check"
+        app:buttonColor="#6B5757"
    />
 </LinearLayout>
