--- a/pulsingbutton/src/main/res/values/attrs.xml
+++ b/pulsingbutton/src/main/res/values/attrs.xml
@@ -5,5 +5,6 @@
     <attr name="pulseColor" format="color" />
     <attr name="loadingIcon" format="reference" />
     <attr name="successIcon" format="reference" />
-</declare-styleable>
+        <attr name="buttonColor" format="color" />
+    </declare-styleable>
 </resources>
